<resources>

    <!--    GAME STRINGS    -->
    <string name="app_name">RandomGlassGame</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="play">Play</string>
    <string name="score">Score:</string>
    <string name="zero">0</string>
    <string name="name">Name: </string>
    <string name="value">Value</string>
    <string name="maxscore">MaxScore:</string>
    <string name="currentscore">CurrentScore:</string>
    <string name="back">Back</string>
    <string name="difficulty">Difficulty:</string>
    <string name="glass">Glass</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="pick_a_correct_glass">Pick a correct glass…</string>
    <string name="keep_an_eye_on_the_glasses">Keep an eye on the glasses..</string>
    <string name="ampersand">&amp;</string>
    <string name="balls">Balls</string>
    <string name="glass_2dots">Glass</string>
    <string name="shop">Shop</string>
    <string name="inventory">Inventory</string>
    <string name="stats">Stats</string>
    <string name="score_upper">SCORE</string>
    <string name="coins_upper">COINS</string>
    <string name="settings_upper">SETTINGS</string>
    <string name="confirm_upper">CONFIRM</string>
    <string name="options_upper">OPTIONS</string>
    <string name="difficulty_upper">DIFFICULTY</string>
    <string name="language_upper">LANGUAGE</string>
    <string name="sounds_upper">SOUNDS</string>
    <string name="music_upper">MUSIC</string>
    <string name="tap_to_screen">Tap to screen..</string>
    <string name="achieves">Achieves</string>

    <!--    SKINS STRINGS    -->
    <string name="default_skin">Default</string>
    <string name="beer1_skin">Beer</string>
    <string name="beer2_skin">Beer2</string>
    <string name="beer_guinness_skin">Guinness</string>
    <string name="wine1_skin">Wine</string>
    <string name="wine2_skin">Wine2</string>
    <string name="wine3_skin">Wine3</string>
    <string name="tea_skin">Tea</string>
    <string name="juice_skin">Juice</string>
    <string name="coffee_skin">Coffee</string>
    <string name="cocos_skin">Cocos</string>
    <string name="soda1_skin">Soda!</string>
    <string name="soda2_skin">Soda2</string>
    <string name="smile_soda_skin">SmileSoda</string>
    <string name="martini_skin">Martini</string>
    <string name="whisky_skin">Whisky</string>

</resources>