<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/inventory"
        android:title="@string/inventory"
        android:icon="@drawable/ic_inventory"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/dark_yellow"
        />

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/dark_yellow"
        />

    <item
        android:id="@+id/shop"
        android:title="@string/shop"
        android:icon="@drawable/ic_shop"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/dark_yellow"
        />

</menu>