<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".activity.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:background="@drawable/profile_back"

        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile"
            android:textSize="24sp"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@+id/tvMaxScore"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/value"
            android:textSize="16sp"

            app:layout_constraintBottom_toBottomOf="@+id/tvName"
            app:layout_constraintStart_toEndOf="@+id/tvName"
            app:layout_constraintTop_toTopOf="@+id/tvName" />


        <TextView
            android:id="@+id/tvMaxScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxscore"
            android:textSize="16sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@+id/tvCurrentScore"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvMaxScoreVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/value"
            android:textSize="16sp"

            app:layout_constraintBottom_toBottomOf="@+id/tvMaxScore"
            app:layout_constraintStart_toEndOf="@+id/tvMaxScore"
            app:layout_constraintTop_toTopOf="@+id/tvMaxScore" />

        <TextView
            android:id="@+id/tvCurrentScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentscore"
            android:textSize="16sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvMaxScore"
            app:layout_constraintTop_toBottomOf="@+id/tvMaxScore" />


        <TextView
            android:id="@+id/tvCurrentScoreVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/value"
            android:textSize="16sp"

            app:layout_constraintBottom_toBottomOf="@+id/tvCurrentScore"
            app:layout_constraintStart_toEndOf="@+id/tvCurrentScore"
            app:layout_constraintTop_toTopOf="@+id/tvCurrentScore" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>