<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">


    <TextView
        android:id="@+id/tvGlass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glass"
        android:textColor="@color/orange"
        android:textSize="64sp"
        android:textStyle="bold|italic"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


    <TextView
        android:id="@+id/tvBalls"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:text="@string/balls"
        android:textColor="@color/dark_yellow"
        android:textSize="64sp"
        android:textStyle="bold|italic"

        app:layout_constraintStart_toStartOf="@+id/tvGlass"
        app:layout_constraintTop_toBottomOf="@+id/tvGlass" />

    <TextView
        android:id="@+id/tvAnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ampersand"
        android:textColor="@color/white"
        android:textSize="84sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/tvBalls"
        app:layout_constraintEnd_toEndOf="@+id/tvGlass"
        app:layout_constraintStart_toStartOf="@+id/tvGlass"
        app:layout_constraintTop_toTopOf="@+id/tvGlass" />

    <ImageView
        android:id="@+id/btnSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:padding="6dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/button_background"
        android:paddingStart="24dp"
        android:paddingTop="9dp"

        android:paddingEnd="24dp"
        android:paddingBottom="9dp"

        android:text="@string/play"
        android:textColor="@color/white"
        style="@style/textStyle"
        android:textStyle="bold|italic"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBalls" />


</androidx.constraintlayout.widget.ConstraintLayout>