<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/transparent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="@drawable/allert_window_background"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomLine"
        app:layout_constraintEnd_toStartOf="@+id/rightLine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftLine"
        app:layout_constraintTop_toTopOf="@+id/topLine"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:id="@+id/llSoundSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="6dp"
            app:layout_constraintBottom_toTopOf="@+id/llMusicSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/topLineForOptions">

            <TextView
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sounds_upper"
                android:textColor="@color/dark_yellow" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swSounds"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:thumb="@drawable/settings_switch_thumb"
                app:track="@drawable/settings_switch_track" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/llMusicSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="6dp"
            app:layout_constraintBottom_toTopOf="@+id/llDifficultySpiner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llSoundSwitch">

            <TextView
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/music_upper"
                android:textColor="@color/dark_yellow" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swMusic"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:thumb="@drawable/settings_switch_thumb"
                app:track="@drawable/settings_switch_track" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDifficultySpiner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp"
            app:layout_constraintBottom_toTopOf="@+id/llLanguageSpiner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llMusicSwitch">

            <TextView
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty_upper"
                android:textColor="@color/dark_yellow" />

            <Spinner
                android:id="@+id/spDifficulty"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/settings_spinner_background"
                android:popupBackground="@color/light_yellow"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLanguageSpiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp"
            app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llDifficultySpiner">

            <TextView
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_upper"
                android:textColor="@color/dark_yellow" />

            <Spinner
                android:id="@+id/spLanguage"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/settings_spinner_background"
                android:popupBackground="@color/light_yellow"/>


        </LinearLayout>

        <TextView
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/allert_window_background"
            android:paddingStart="16dp"
            android:paddingTop="9dp"
            android:paddingEnd="16dp"
            android:paddingBottom="9dp"
            android:text="@string/confirm_upper"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llLanguageSpiner" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topLineForOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/textStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/banner_for_allert"
        android:gravity="center"
        android:padding="16dp"

        android:text="@string/options_upper"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/topLine"
        app:layout_constraintEnd_toStartOf="@+id/rightLine"
        app:layout_constraintStart_toStartOf="@+id/leftLine"
        app:layout_constraintTop_toTopOf="@+id/topLine"
        app:layout_constraintWidth_percent="0.4" />

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/allert_window_background"
        android:padding="6dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toTopOf="@+id/topLine"
        app:layout_constraintEnd_toStartOf="@+id/rightLine"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/topLine"
        android:contentDescription="ExitButton" />

</androidx.constraintlayout.widget.ConstraintLayout>